--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <body style=background-color:Grey; width:100% margin:100% height:100%>
- <p style="font-family:Courier; color:White; font-size: 14px; float:center;"> <b> Name: </b> A2 Group #11 </p>
+ <p style="font-family:Courier; color:White; font-size: 17px; float:center;"> <b> Group Name: </b> A2 Group #11 </p>
   
                                                                             
                                                                             
